--- a/datasource.yml
+++ b/datasource.yml
@@ -1,6 +1,1 @@
-spring:
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://61.162.57.114:13306/smartport
-    username: smartport
-    password: smartport
+rde=099
