--- a/service-hi/service-hi.properties
+++ b/service-hi/service-hi.properties
@@ -1,1 +1,6 @@
-rde=999
+spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://61.162.57.114:13306/smartport
+    username: smartport
+    password: smartport
